--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,24 +1,26 @@
 .main-navbar{
-    width: 96px;
-    height: 931px;
+    width: 80px;
+    height: 100vh;
     flex-shrink: 0;
     border-radius: 10px;
     background: #264ECA;
+    display: flex;
+    flex-direction: column;
 }
 
 .nav-option{
-    margin: 10 10 10 10;
     display: flex;
-    width: 52px;
+    width: 100%;
     height: 42px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 3px;
     flex-shrink: 0;
+    padding-bottom: 7.5px;
+    padding-top: 7.5px;
 }
 
-.nav-text{
+.nav-text{ 
     color: #FFF;
     text-align: center;
     font-family: Poppins;
@@ -29,10 +31,16 @@
 }
 
 .icon{
-    width: 24px;
-    height: 24px;
+    
+    width: 32px;
+    height: 32px;
     flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
 
 
 
