--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -1,36 +1,73 @@
+/* Dashboard.css */
+
 .container {
-    display: flex;
-    height: 100vh; 
+    max-width: 100%;
+    margin: 0 auto;
 }
 
-.nav-dash {
+.row {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    width: 90px;
+    
+   
 }
 
-.main-container{
+.column {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+   
+}
+
+
+.nav-bar {
+    height: 100vh;
+    box-sizing: border-box;
+    width: 8%;
+}
+
+.dashboard-content {
+    background-color: #ffffff;
+    box-sizing: border-box;
+    width: 92%;
+}
+
+.cost-revenew {
+    background-color: #f8f9fa;
+    display: flex;
+    margin-bottom: 20px;
+    padding: 20px;
+    border: 1px solid #dee2e6;
+    border-radius: 4px;
     width: 100%;
-    float: right;
-}
-
-.data-cards{
-    background: blue;
-    height: 15%;
-
     
 }
 
-.chars{
-    display: flex;
-    height: 85%;
+
+
+/* Responsive Design */
+@media (max-width: 767px) {
+    .col-md-2,
+    .col-md-6,
+    .col-md-10 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
 
-.charts-card{
-    display: flex;
-    flex-direction: column;
-    width: 40px;
-}
+@media (min-width: 768px) {
+    .col-md-2 {
+        flex: 0 0 16.66667%;
+        max-width: 16.66667%;
+    }
 
+    .col-md-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+
+    .col-md-10 {
+        flex: 0 0 83.33333%;
+        max-width: 83.33333%;
+    }
+}
