--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,18 +6,29 @@
     background: #264ECA;
     display: flex;
     flex-direction: column;
+    padding-top: 20px;
 }
 
 .nav-option{
     display: flex;
     width: 100%;
-    height: 42px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-shrink: 0;
-    padding-bottom: 7.5px;
-    padding-top: 7.5px;
+    padding: 10px 0;
+    cursor: pointer;
+    position: relative;  /* Set position relative to .nav-option */
+    transition: all 0.3s;  /* Adjust transition to apply to all properties */
+}
+
+.nav-option:hover::before {
+    content: "";  /* Empty content */
+    position: absolute;  /* Absolute position */
+    top: 0;
+    left: 0;
+    width: 5px;  /* Width of the line */
+    height: 100%;  /* Full height of the .nav-option element */
+    background-color: white;  /* Color of the line */
 }
 
 .nav-text{ 
@@ -28,19 +39,33 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-top: 5px;
 }
 
 .icon{
-    
     width: 32px;
     height: 32px;
-    flex-shrink: 0;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+/* New class for active nav option */
+.active-nav-option::before {
+    background: #4068D6; 
+}
 
+.active-nav-option::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 5px;
+    height: 100%;
+    background-color: #264ECA;  /* Color of the line */
+}
 
-
+.active-nav-option:hover{
+    background-color: #4068D6;
+}
 
