--- a/src/Pages/LoginPage/loginpage.css
+++ b/src/Pages/LoginPage/loginpage.css
@@ -262,3 +262,37 @@
     background-size: cover;
     background-position: center;
 }
+
+
+
+.InputCollection .ant-input {
+    height: 50px;
+    font-size: 16px;
+}
+
+.InputCollection .ant-checkbox-wrapper {
+    color: #FFF;
+    font-size: 16px;
+}
+
+.InputCollection .ant-checkbox-checked .ant-checkbox-inner {
+    background-color: #5F6FFF;
+    border-color: #5F6FFF;
+}
+
+.login-btn {
+    width: 100%;
+    height: 60px;
+    font-size: 16px;
+}
+
+/* Mobile responsiveness */
+@media (max-width: 768px) {
+    .LoginContainer {
+        flex-direction: column;
+    }
+
+    .LoginDetails, .Background {
+        width: 100%;
+    }
+}
