--- a/src/components/hedder/hedder.css
+++ b/src/components/hedder/hedder.css
@@ -12,6 +12,32 @@
     justify-content: center;
 }
 
+.logout-container {
+    margin-left: auto; 
+    padding-right: 20px;
+    margin-top: 20px; 
+}
+
+.logout-button {
+    background-color: #5F6FFF;
+    color: #FFF;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+    &:hover {
+        background-color: #4f5fd0;
+    }
+}
+
+
+
+
+
+
 .name{
     display: flex;
     width: 240px;
