--- a/src/Pages/ProductPage/product.css
+++ b/src/Pages/ProductPage/product.css
@@ -6,3 +6,11 @@
     border-radius: 5px;
   }
   
+  .topic{
+    color: gray;
+    font-family: 'Magra';
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    margin: 0;
+}
