--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -20,6 +20,24 @@
     transition: all 0.3s;  
 }
 
+.nav-option a {
+    text-decoration: none;
+    color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%; /* take full height of the parent */
+    width: 100%; /* take full width of the parent */
+    text-decoration: none; /* remove underline from the link */
+
+    
+}
+
+.item-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .nav-option:hover::before {
     content: "";  
     position: absolute;  
@@ -41,7 +59,23 @@
     margin-top: 5px;
 }
 
+.topic{
+    color: gray;
+    font-family: 'Magra';
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    margin: 0;
+}
+
 .icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon path{
+
     width: 32px;
     height: 32px;
     display: flex;
